tests/paczka2/big_fuzzy/30611060.err
Error in line 3: YWHV A715 0,8
Error in line 11: IoRtSE S219 -1,5
Error in line 27: S931 A715 12,5
Error in line 21: Zr5A4vUXVn5 S219 83,9
Error in line 28: aUIJXY5bx S219 91,9
Error in line 34: eF31Hfx A715 5,4
Error in line 30: YWHV S219 99,2
Error in line 44: YWHV S931 59,3
Error in line 38: eF31Hfx S931 25,1
Error in line 22: zUY S219 97,0
Error in line 45: YWHV A715 32,4
Error in line 59: YWHV S|31 65,8
Error in line 51: YWHV S931 38,5
Error in line 68: YWHV S931 43,9
Error in line 75: YWHV S219 2,5
Error in line 80: S931 é715 4,2
Error in line 73: zUY A278 788,4
Error in line 63: aUIJXY5bx S931 24,9
Error in line 82: zUY S931 85,2
Error in line 85: aUIJXY5bx A715 29,2
Error in line 72: IoRtSE S219 4,9
Error in line 83: YWHV A715 289,9
Error in line 94: zUY S2Y9 YY0,6
Error in line 93: aUIJXY5bx S219 49,7
Error in line 84: Zr5A4vUXVn5 A278 3,2
Error in line 99: aUIJXY5bx A278 13,7
Error in line 106: Zr5A4vUXVn5 A715 46,3
Error in line 105: IoRtSE S219 94,5
Error in line 115: aUIJXY5bx A278 82,3
Error in line 117: Zr5A4vUXVn5 S219 31,0
Error in line 104: zUY S219 18,1
Error in line 126: Zr5A4vUXVn5 A278 96,8
Error in line 129: S931 A278 36,6
Error in line 157: YWHV S219 12,16
Error in line 158: eF31Hfx A278 85,7
Error in line 162: eF31Hfx S219 15,0
Error in line 169: eF31Hfx S931 53,9
Error in line 159: YWHV S219 15,6
Error in line 172: YWHV A278 49,6
Error in line 170: S931 S219 63,2
Error in line 191: IoRtSE A278 14,8
Error in line 198: S931 S219 72,4
Error in line 209: Zr5A4vUXVn5 A278 -1,4
Error in line 211: IoRtSE A278 73,63
Error in line 205: Zr5A4vUXVn5 A278 21,4
Error in line 216: aUIJXY5bx A715 63,9
Error in line 210: IoRtSE A278 38,4
Error in line 240: YWHV A715 88,6
Error in line 233: Zr5A4vUXVn5 A278 2,1
